1. Changed schema and database name 2. Changed multiple endpoints response body. 3. /search-book - Enabled case in sensitive search 4. /place-order - on empty cart, Show relevant error. 5. Changed bookList in order table to comma separated String 6. /remove-book-from-cart - only allow to remove book if present in cart

--- a/book-store/src/main/resources/application.yml
+++ b/book-store/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: book-store
   datasource:
-    url: jdbc:postgresql://localhost:5432/hcl
+    url: jdbc:postgresql://localhost:5432/imagine
     username: postgres
     password: postgres
   jpa:
@@ -11,8 +11,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-  config:
-    location: /app
 
 server:
   servlet:
