--- a/book-store/pom.xml
+++ b/book-store/pom.xml
@@ -64,6 +64,18 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version> <!-- Replace with the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
